--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CSonic - Modular WhatsApp Business Bot System for South African Small Businesses",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "dev": "nodemon app.js",
     "init-db": "node database/init.js",
     "seed": "node database/seed.js"
