--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "init-db": "node database/init.js",
     "seed": "node database/seed.js"
   },
