--- a/render.yaml
+++ b/render.yaml
@@ -14,13 +14,11 @@ services:
         value: 18
       - key: PORT
         value: 10000
-      - key: WHATSAPP_ACCESS_TOKEN
+      - key: WHATSAPP_TOKEN
         sync: false
-      - key: WHATSAPP_PHONE_NUMBER_ID
+      - key: PHONE_NUMBER_ID
         sync: false
-      - key: WHATSAPP_BUSINESS_ACCOUNT_ID
-        sync: false
-      - key: WHATSAPP_VERIFY_TOKEN
+      - key: VERIFY_TOKEN
         sync: false
       - key: DB_PATH
         value: ./database/businesses.db
