--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
   "name": "csonic-bot",
   "version": "1.0.0",
-  "description": "CSonic - Modular WhatsApp Business Bot System for South African Small Businesses",
-  "main": "app.js",
+  "description": "CSonic - Modular WhatsApp Business Bot System",
+  "main": "server.js",
   "scripts": {
-    "prestart": "node migrate.js",
     "start": "node server.js",
-    "predev": "node migrate.js",
+    "prestart": "node database/migrate.js",
     "dev": "nodemon server.js",
-    "migrate": "node migrate.js",
+    "migrate": "node database/migrate.js",
     "init-db": "node database/init.js",
     "seed": "node database/seed.js"
-  },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "business",
-    "south-africa"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "sqlite3": "^5.1.6",
-    "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "node-cron": "^3.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
 
