Install body-parser

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "seed": "node database/seed.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "body": "^5.1.0",
+    "express": "^5.1.0",
+    "parser": "^0.1.4"
   }
 }
